added image to first

--- a/First.html
+++ b/First.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-   <html>
-      <head>
-        <title>First</title>
-        <link rel="stylesheet" href="page.css">
-      </head>
-     <body>
-        <div><h1>First line</h1></div>
-        <div><p>A new line in file</p></div>
-     </body>
-   </html>
+<html>
+
+<head>
+   <title>First</title>
+   <link rel="stylesheet" href="page.css">
+</head>
+
+<body>
+   <div>
+      <h1>First line</h1>
+   </div>
+   <div><img src="first.jpg" alt="first" style="width:100%;max-width:960px;"></div>
+   <div>
+      <p>A new line in file</p>
+      <p>A new line</p>
+   </div>
+</body>
+
+</html>
