--- a/First.html
+++ b/First.html
@@ -6,6 +6,7 @@
       </head>
      <body>
         <div><h1>First line</h1></div>
-        <div><p>A new line in file</p></div>
+        <div><p>A new line in file</p>
+      <p>merge</p></div>
      </body>
    </html>
