--- a/First.html
+++ b/First.html
@@ -10,10 +10,11 @@
    <div>
       <h1>First line</h1>
    </div>
-   <div><img src="first.jpg" alt="first" style="width:100%;max-width:960px;"></div>
+   <div><img src="first.png" alt="first" style="width:100%;max-width:960px;"></div>
    <div>
       <p>A new line in file</p>
       <p>A new line</p>
+      <div><img src="HTML_Blog-scaled.jpeg" alt="html" style="width:100%;max-width:640px;"></div>
    </div>
 </body>
 
