--- a/First.html
+++ b/First.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-   <div>
-      <h1>First line</h1>
+   <div class="d_head">
+      <h1>First</h1>
    </div>
    <div><img src="first.png" alt="first" style="width:100%;max-width:960px;"></div>
    <div>
