margin css updated

--- a/First.html
+++ b/First.html
@@ -8,7 +8,7 @@
 
 <body>
    <div class="d_head">
-      <h1>First</h1>
+      <h1 id="h-first">First</h1>
    </div>
    <div><img src="first.png" alt="first" style="width:100%;max-width:960px;"></div>
    <div>
